fix align

--- a/main_css.css
+++ b/main_css.css
@@ -1,30 +1,34 @@
-
-
+html,body{
+	height : 100%;
+	width : 100%;
+}
 #middle {
-	width : 1272px;
-    height:600px;
+	width : 100%;
+    height:100%;
+	overflow : hidden;
 	position: absolute;
 	text-align : center;
+	display:block;
+	
 }
 
 #search {
 	background-color: #eee;
     color:#3E606F;
 	width:49%;
-	height:430px;
+	height:100%;
 	float: left;
 	text-align:center;
 	font-size:60px;
 	padding: 100px 0px;
     letter-spacing: 3px;
-
 }
 
 #write {
     background-color: #3E606F;
     color: #eee;
     width: 50%;
-    height: 430px;
+	height: 100%;
     float: left;
     text-align: center;
     font-size: 60px;
