--- a/search/DPsearch1_css.css
+++ b/search/DPsearch1_css.css
@@ -1,9 +1,14 @@
+html,body{
+	height :100%;
+	width : 100%;
+}
+
 #upper-box {
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	padding: 0px;
-	width: 1272px;
+	width: 100%;
 	height: 150px;
 	background-color: #3E606F;
 	text-align: left;
@@ -29,7 +34,7 @@
 
 #title {
 	position : absolute;
-	left : 10%;
+	left : 80px;
 	top : 40px;
 	font-size : 50px;
 }
@@ -135,13 +140,9 @@ td, th{
 	height: 100px;
 	background-color: white;
 	color: #eee;
-   font-weight:bold;
+	font-weight:bold;
 }
 
-.ok:hover {
-
-
-}
 
 #arrow {
 	background-image: url(arrow_to_down.png);
